--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "Lootbox Review"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Danny Farmer & Matt McCombs"
+description              : "A dedicated space for discovering the true cost of gaming."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
