quotations are important

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ staticman:
   path                   : # "/_data/comments/{options.slug}" (default)
   requiredFields         : # ['name', 'email', 'message']
   transforms:
-    email                : "md5"
+    email                : # "md5"
   generatedFields:
     date:
       type               : # "date"
@@ -85,7 +85,7 @@ social:
 analytics:
   provider               : "google" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-114655442-1"
+    tracking_id          : UA-114655442-1
 
 
 # Site Author
