--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ title_separator          : " | "
 name                     : "Lootbox Review"
 description              : "Discovering the true cost of gaming."
 url                      : "https://lootboxreview.github.io"
-baseurl                  : "/lootboxreview" # the subpath of your site, e.g. "/blog"
-repository               : "lootboxreview/lootboxreview" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : true # true, false (default)
 words_per_minute         : 200
