testing a splash page embedded in the navigation yml file

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Lootbox Review"
-    url: https://lootboxreview.github.io/
+    url: /splash-page/
   - title: "About"
     url: /year-archive/
   - title: "FAQ"
